--- a/index.html
+++ b/index.html
@@ -83,9 +83,10 @@
 
     .aligncenter {
       display: block;
-margin-left: auto;
-margin-right: auto;
-text-align: center;
+      margin-left: auto;
+      margin-right: auto;
+      text-align: center;
+      max-width: 100%;
     }
   </style>
 </head>
