add newsletter signup

--- a/index.html
+++ b/index.html
@@ -9,100 +9,37 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
   <script src="https://use.fontawesome.com/7e4938e866.js"></script>
   <link rel="stylesheet" href="icomoon.css" />
-
-  <style>
-    #intro:before {
-      background: url("./images/parallax_bg3.jpg") no-repeat center center scroll;
-      -webkit-background-size: cover;
-      background-size: cover;
-      opacity: 0.4;
-      content: ' ';
-      display: block;
-      position: absolute;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      z-index: 1;
-    }
-
-    #intro p {
-      color: white;
-    }
-
-    #intro {
-      background-color: black;
-    }
-
-    #intro * {
-      z-index: 2;
-    }
-
-    @media (min-width: 992px){
-      #intro {
-        height: 100%;
-        position: fixed;
-        overflow: hidden;
-        margin: 0;
-        z-index: 1;
-        -webkit-transition: all 400ms;
-        transition: all 400ms;
-      }
-
-      #content {
-        padding: 70px;
-      }
-      /*#content > .navbar {
-        margin-bottom: 40px;
-      }*/
-      #content > hr.separator {
-        margin-top: 40px;
-        margin-bottom: 40px;
-      }
-    }
-
-    .post {
-      position: relative;
-    }
-    .post h2 a {
-      color: black;
-    }
-
-    .post .permalink {
-      position: absolute;
-      left: -40px;
-      top: 4px;
-    }
-
-    .post .permalink a {
-      color: white;
-    }
-    .post .permalink a:hover {
-      color:#014c8c;
-    }
-
-    .aligncenter {
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-      text-align: center;
-      max-width: 100%;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
   <div class="row" style="margin: 0;">
     <div class="col-lg-3 col-xl-4" id="intro">
-      <div class="row align-items-center" style="height: 100%">
+      <div class="row align-items-center" id="logo-slogan">
         <div class="col text-center">
-          <img class="img-fluid" src="./images/hackforge_logo_white.png" />
-          <p class="lead">A Home for Windsor's Tech Community</p>
+          <div class="row align-items-center">
+            <div class="col-4 col-lg-12">
+              <img class="img-fluid" src="./images/hackforge_logo_white.png" />
+            </div>
+            <div class="col-8 col-lg-12">
+              <p class="lead" style="margin: 0">A Home for Windsor's Tech Community</p>
+            </div>
+          </div>
         </div>
+      </div>
+
+      <div id="newsletter">
+        <form>
+          <div class="input-group">
+            <input type="email" class="form-control" placeholder="Signup for the Newsletter" />
+            <span class="input-group-btn">
+              <button class="btn btn-outline-secondary" type="button"><span class="fa fa-send"></span></button>
+            </span>
+          </div>
+        </form>
       </div>
     </div>
     <div class="col-lg-9 offset-lg-3 col-xl-8 offset-xl-4" id="content">
-
       <nav class="navbar navbar-toggleable-md navbar-light" style="background-color: none;">
         <button class="navbar-toggler navbar-toggler-right" type="button"
           data-toggle="collapse" data-target="#navbarText"
@@ -123,19 +60,25 @@
 
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="#">
+              <a class="nav-link" href="#" title="Facebook">
                 <span class="fa fa-lg fa-facebook"></span>
                 <span class="hidden-lg-up">Facebook</span>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">
+              <a class="nav-link" href="#" title="Twitter">
                 <span class="fa fa-lg fa-twitter"></span>
                 <span class="hidden-lg-up">Twitter</span>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">
+              <a class="nav-link" href="#" title="Instagram">
+                <span class="fa fa-lg fa-instagram"></span>
+                <span class="hidden-lg-up">Instagram</span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#" title="Chat on Discord">
                 <span class="fa-lg icon-Discord-Logo-Black"></span>
                 <span class="hidden-lg-up">Discord</span>
               </a>
