Wordpressify the index.html

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <div class="input-group">
             <input type="email" class="form-control" placeholder="Signup for the Newsletter" />
             <span class="input-group-btn">
-              <button class="btn btn-outline-secondary" type="button"><span class="fa fa-send"></span></button>
+              <button class="btn btn-outline-info" type="button"><span class="fa fa-send"></span></button>
             </span>
           </div>
         </form>
